--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "lib": ["es2019", "dom"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/templates/*.ts"]
+  "exclude": ["src/commands/templates/*.ts"]
 }
